project(Endorphin)
cmake_minimum_required(VERSION 3.16)
include(CTest)
include(definitions.cmake)
include(endorphinbase.cmake)
if(BUILD_TESTING)
    add_subdirectory(autotests)
endif()
set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTORCC ON)
set(CMAKE_AUTOUIC ON)
set(CMAKE_BUILD_TYPE Release)
set(CMAKE_INCLUDE_CURRENT_DIR ON)
add_definitions(-Wall)

add_subdirectory(src)
add_subdirectory(tools)
