project(autotests)
add_subdirectory(addbookmarkdialog)
add_subdirectory(autosaver)
add_subdirectory(bookmarknode)
#add_subdirectory(downloadmanager)
add_subdirectory(historyfiltermodel)
add_subdirectory(historymanager)
add_subdirectory(modeltoolbar)
add_subdirectory(opensearchengine)
add_subdirectory(opensearchmanager)
add_subdirectory(opensearchreader)
add_subdirectory(opensearchwriter)
add_subdirectory(searchlineedit)
add_subdirectory(tabbar)
add_subdirectory(tabwidget)
add_subdirectory(utils)
add_subdirectory(webactionmapper)
#add_subdirectory(webpage)
add_subdirectory(xbel)